--- a/views/home.html
+++ b/views/home.html
@@ -1,2 +1,6 @@
-<slider>s</slider>
+<slider>
+    <ul class="bxslider">
+      <li><img src="img/slider-1.jpg" /></li>      
+    </ul>
+  </slider>
 <contactos>contastos a todos</contactos>
