80% de quienes somos

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@
 .nav-ave img{width: auto;height: auto;top: 0;} 
 
 a{font-family: 'open_sanssemibold';}
-
+.navbar-default{border: none;}
 .navbar>li>#quienes-somos{
 	background: #1d6c95;
 	padding: 0 5px;
@@ -52,6 +52,7 @@ a{font-family: 'open_sanssemibold';}
 /*Quienes somo*//*Template base */
 .navbar{
 	background-color: #369fd6;
+	border-radius: 0px;
 }
 .logo img{	
 	width: 360px;
@@ -110,3 +111,9 @@ a{font-family: 'open_sanssemibold';}
 }
 
 /*Quienes somo*/
+
+
+/*------------------------*/
+/*-----INTERIOR BASE-------*/
+/*------------------------*/
+.pos_interior{margin-top: -20px;}
