--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,6 +13,57 @@
 	.navbar-header .logo .nav-ave {
 	margin-left: 32px;
 	}
+	.cont-contact {
+	background-image: url(../img/home/fondo-contact2.png);
+	width: 100%;
+	height: auto;
+	margin-top: -100px;
+	/* border-right: 0; */
+}
+	.des-rol {
+	margin: 0;
+	color: #fff;
+	}
+	.project-1{
+	background-image: url(../img/home/proy-movil-1.png);height: 200px;
+	padding-top: 25px;
+}
+	.project-1:hover{
+	background-image: url(../img/home/proy-movil-1-hover.png);height: 200px;}
+
+	.project-2{
+	background-image: url(../img/home/proy-movil-2.png);height: 200px;
+	padding-top: 25px;
+}
+	.project-2:hover{
+	background-image: url(../img/home/proy-movil-2-hover.png);height: 200px;}
+
+	.project-3{
+	background-image: url(../img/home/proy-movil-3.png);height: 200px;
+	padding-top: 25px;
+}
+	.project-3:hover{
+	background-image: url(../img/home/proy-movil-3-hover.png);height: 200px;}
+
+	.project-4{
+	background-image: url(../img/home/proy-movil-4.png);height: 200px;
+	padding-top: 25px;
+}
+	.project-4:hover{
+	background-image: url(../img/home/proy-movil-4-hover.png);height: 200px;}
+
+	.project-5{
+	background-image: url(../img/home/proy-movil-5.png);height: 200px;
+	padding-top: 25px;
+}
+	.project-5:hover{
+	background-image: url(../img/home/proy-movil-5-hover.png);height: 200px;}
+	.cont-prot {margin-top: 0;}
+	.cont-project {
+	width: auto;
+	margin-right: 3px;
+}
+	
 }
 
 @media (min-width: 768px){
@@ -28,5 +79,70 @@
 	height: auto;
 	top: 0;
 	}
+	.nav-2 li a {
+	padding: 15px 15px !important;
+	font-size: 10px;
+	}
+	.navbar-nav.navbar-right:last-child {
+	margin-right: -30px;
+	}
+	.cont-contact {
+	background-image: url(../img/home/fondo-contact2.png);
+	width: 100%;
+	height: auto;
+	border-right: 8px solid #fff;
+	margin-top: -232px;
+}
+	.des-rol {
+	margin: 10px 0;
+	color: #807E7E;
+	}
+	.project-1{
+	background-image: url(../img/home/home-project1.png);height: 634px;background-repeat: no-repeat;}
+	.project-1:hover{
+	background-image: url(../img/home/project1-hover.png);height: 634px;}
+	.project-2{
+	background-image: url(../img/home/home-project2.png);height: 634px;background-repeat: no-repeat;}
+	.project-2:hover{
+	background-image: url(../img/home/project2-hover.png);height: 634px;}
+	.project-3{
+	background-image: url(../img/home/home-project3.png);height: 679px;background-repeat: no-repeat;}
+	.project-3:hover{
+	background-image: url(../img/home/project3-hover.png);height: 634px;}
+	.project-4{
+	background-image: url(../img/home/home-project4.png);
+	height: 679px;background-repeat: no-repeat;}
+	.project-4:hover{
+	background-image: url(../img/home/project4-hover.png);height: 679px;background-repeat: no-repeat;}
+	.project-5{
+	background-image: url(../img/home/home-project5.png);height: 679px;background-repeat: no-repeat;}
+	.project-5:hover{
+	background-image: url(../img/home/project5-hover.png);height: 679px;}
+	.cont-prot {
+		margin-top: 250px;
+	}
+	.cont-contact {
+	/* margin-top: -232px; */
+}
+	.cont-project {
+	width: 101%;
+}
 
+}
+@media (min-width: 992px){
+	.nav-2 li a {
+	padding: 15px 25px !important;
+	font-size: 12px;
+	}
+	.navbar-nav.navbar-right:last-child {
+	margin-right: -25px;
+	}
+	.cont-contact {
+	background-image: url(../img/home/fondo-contact.png);
+	width: 100%;
+	height: 875px;
+	overflow: hidden;
+	border-right: 2px solid #fff;
+}
+	
 }
