--- a/css/styles.css
+++ b/css/styles.css
@@ -47,11 +47,10 @@ a{font-family: 'open_sanssemibold';}
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover{
 	background: #1d6c95;
 }
-/*Home*/
-
-/*Quienes somo*//*Template base */
 .navbar{
 	background-color: #369fd6;
+	position: fixed;
+	width: 100%;
 }
 .logo img{	
 	width: 360px;
@@ -89,6 +88,96 @@ a{font-family: 'open_sanssemibold';}
 .yt-img a:hover{background-image: url(../img/you-tube-hover.png);background-repeat: no-repeat;}
 .nav-ave img{width: auto;height: auto;top: 0;} 
 
+a,p{font-family: 'open_sanssemibold';}
+
+.navbar>li>#quienes-somos{background: #1d6c95;padding: 0 5px;}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover{
+	background: #1d6c95;
+}
+.navbar-default .navbar-nav > .active > a:focus{background: #1d6c95;}
+.open a:focus{background: #1d6c95!important;}
+.dropdown-menu{background: #1d6c95!important;}
+.dropdown-menu > li > a:hover{background-color: #0C4F73;}
+.fon-fot{
+	background-image: url(../img/fondo-footer.jpg);
+	background-position: center;
+}
+.navbar-default .navbar-toggle .icon-bar {
+background-color: #FFF;
+}
+.navbar-default .navbar-toggle:hover{
+background-color: #1681BA;
+}
+.navbar-default .navbar-toggle:focus {
+background-color: #1681BA;
+}
+
+/*Home*/
+.bxslider img{
+	width: 100%;
+}
+.text-intro p{
+	font-family:  'open_sansregular';
+	font-size: 18px;
+}
+.text-intro img{
+	margin: 28px;
+}
+.blue{
+	color:#369fd6;
+	font-weight: 500;
+}
+button{
+	background-color: #fff;
+	color:#369fd6;
+	padding: 8px 30px;
+	border: 1px solid #369fd6;
+	font-family: 'open_sansbold';
+	margin: 28px 0;
+}
+button:hover{
+	color: #fff;
+	background-color: #369fd6;
+}
+.navbar{
+	background-color: #369fd6;
+}
+.logo img{	
+	width: 360px;
+	height: 143px;
+	position: absolute;
+}
+.navbar-header .logo .nav-ave{
+	margin-left: 67px;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+}
+.nav-2{
+	margin-left: 327px;
+}
+.nav-2 li:hover{
+	background-color: #1d6c95;
+}
+.nav-2 a{
+	font-size: 12px;
+	font-family: 'open_sansregular';
+	font-weight: bold;
+	color: #fff!important;
+	padding: 15px 25px !important;
+}
+.navbar-right a{
+	padding-top:0;
+	padding-bottom: 0; 
+	margin-top: 12px;
+}
+.fb-img a{background-image: url(../img/face.png);background-repeat: no-repeat;}
+.fb-img a:hover{background-image: url(../img/face-hover.png);background-repeat: no-repeat;
+}
+.yt-img a{background-image: url(../img/you-tube.png);background-repeat: no-repeat;}
+.yt-img a:hover{background-image: url(../img/you-tube-hover.png);background-repeat: no-repeat;}
+.nav-ave img{width: auto;height: auto;top: 0;} 
+
 a{font-family: 'open_sanssemibold';}
 
 .navbar>li>#quienes-somos{
@@ -98,15 +187,204 @@ a{font-family: 'open_sanssemibold';}
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover{
 	background: #1d6c95;
 }
+
+.navbar{
+	background-color: #369fd6;
+	position: fixed;
+	width: 100%;
+	z-index: 999;
+	border: none;
+	border-radius: 0px;
+}
+.logo img{	
+	width: 360px;
+	height: 143px;
+	position: absolute;
+}
+.navbar-header .logo .nav-ave{
+	margin-left: 67px;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+}
+.nav-2{
+	margin-left: 327px;
+}
+.nav-2 li:hover{
+	background: #1d6c95 !important;
+}
+.nav-2 li a{
+	font-size: 12px;
+	font-family: 'open_sansregular';
+	font-weight: bold;
+	color: #fff!important;
+	padding: 15px 25px !important;
+}
+.navbar-right a{
+	padding-top:0;
+	padding-bottom: 0; 
+	margin-top: 12px;
+}
+.fb-img a{background-image: url(../img/face.png);background-repeat: no-repeat;}
+.fb-img a:hover{background-image: url(../img/face-hover.png);background-repeat: no-repeat;
+}
+.yt-img a{background-image: url(../img/you-tube.png);background-repeat: no-repeat;}
+.yt-img a:hover{background-image: url(../img/you-tube-hover.png);background-repeat: no-repeat;}
+.nav-ave img{width: auto;height: auto;top: 0;} 
+
+a,p{font-family: 'open_sanssemibold';}
+
+.navbar>li>#quienes-somos{background: #1d6c95;padding: 0 5px;}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover{
+	background: #1d6c95;
+}
 .navbar-default .navbar-nav > .active > a:focus{background: #1d6c95;}
 .open a:focus{background: #1d6c95!important;}
 .dropdown-menu{background: #1d6c95!important;}
 .dropdown-menu > li > a:hover{background-color: #0C4F73;}
+.fon-fot{
+	background-image: url(../img/fondo-footer.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+}
+.des-rol p{
+	margin: 10px 0;
+}
 
-
-/*Home*/
+/*----Home-----*/
 .bxslider img{
 	width: 100%;
 }
+.text-intro p{
+	font-family:  'open_sansregular';
+	font-size: 18px;
+}
+.text-intro img{
+	margin: 28px;
+}
+.blue{
+	color:#369fd6;
+	font-weight: 500;
+}
+button{
+	background-color: #fff;
+	color:#369fd6;
+	padding: 8px 30px;
+	border: 1px solid #369fd6;
+	font-family: 'open_sansbold';
+	margin: 28px 0;
+}
+button:hover{
+	color: #fff;
+	background-color: #369fd6;
+}
+.cont-project{
+	overflow: hidden;
+	width: 101%;
+}
+.cont-contact{
+	background-image: url(../img/home/fondo-contact.png);
+	width: 100%;
+	height: 875px;
+	overflow: hidden;
+	margin-top: -225px;
+	border-right: 3px solid #fff;
+	padding-top: 200px;
+	
+}
+.cont-project img{
+	width: 100%
+}
+.cont-project img:hover{
+	background-image: url(../img/home/project-hover.png);
+}
+.project-1{
+	background-image: url(../img/home/home-project1.png);height: 634px;background-repeat: no-repeat;}
+.project-1:hover{
+	background-image: url(../img/home/project1-hover.png);height: 634px;}
+.project-2{
+	background-image: url(../img/home/home-project2.png);height: 634px;background-repeat: no-repeat;}
+.project-2:hover{
+	background-image: url(../img/home/project2-hover.png);height: 634px;}
+.project-3{
+	background-image: url(../img/home/home-project3.png);height: 679px;background-repeat: no-repeat;}
+.project-3:hover{
+	background-image: url(../img/home/project3-hover.png);height: 634px;}
+.project-4{
+	background-image: url(../img/home/home-project4.png);height: 679px;background-repeat: no-repeat;}
+.project-4:hover{
+	background-image: url(../img/home/project4-hover.png);height: 679px;background-repeat: no-repeat;}
+.project-5{
+	background-image: url(../img/home/home-project5.png);height: 679px;background-repeat: no-repeat;}
+.project-5:hover{
+	background-image: url(../img/home/project5-hover.png);height: 679px;}
+.sinpa{
 
+	padding-left: 0;
+	padding-right: 0;
+}
+.cont-prot{
+	width: 150px;
+	height: 150px;
+	margin-top: 250px;
+	padding: 45px 20px;
+	border: 1px solid #fff;
+	text-align: center;
+	color: #fff;
+	font-size: 20px;
+	font-family: 'open_sansbold';
+}
+.cont-prot:hover{
+	background-color: rgba(255, 255, 255, 0.32);
+}
+
+.sinpa a:hover{
+	text-decoration: none;
+}
+.cont-contact .contact {
+	color: #a5a5a5;
+	font-family:  'open_sansregular';
+}
+.cont-contact .contact h2{
+	color: #d25a2c;
+	font-family: 'open_sansbold';
+	font-size: 35px;
+}
+.border{
+	border: 1px solid #DADADA;
+	width: 100px;
+	margin-bottom: 35px;
+}
+.tit-diret{font-family: 'open_sansbold';font-size: 20px; margin-top: 50px;margin-bottom:30px;color:  #d25a2c;}
+.div-bla{
+	color: #fff;margin-top: 10px;
+}
+.contact img{margin: 10px 0;}
+.map{text-decoration: underline;color: #369fd6;font-family: 'open_sansregular';margin-bottom: 20px;}
+.map:hover{text-decoration: none;color: #fff;}
+.form-horizontal .control-label {
+color: #a5a5a5;
+font-family: 'open_sanslight';
+}
+.coment {
+height: 150px;
+border-radius: 0;
+background: rgba(52, 52, 52, 0.85);
+border: 1px solid rgba(204, 204, 204, 0.46);
+}
+.button-1{
+border-radius: 0;
+background: rgba(52, 52, 52, 0.85);
+border: 1px solid rgba(204, 204, 204, 0.46);
+}
+.button-contact {
+float: right;
+border-radius: 0;
+padding: 8px 30px;
+background: #EA551C;
+border: 0;
+color: #fff;
+margin-bottom: 30px;
+}
+.form-control{color: #CFCDCD;}
 /*Quienes somo*/
