--- a/views/home.html
+++ b/views/home.html
@@ -3,4 +3,117 @@
       <li><img src="img/slider-1.jpg" /></li>      
     </ul>
   </slider>
-<contactos>contastos a todos</contactos>
+ 
+ <div class="container">
+ 	<div class="row">
+ 		<div class="col-md-12 text-center">
+ 			<div class="text-intro">
+ 				<img src="img/llaves.jpg" alt="">
+ 				<p>Sabías que font <b class="blue">AVENIR Grupo Inmobiliario®</b>
+ 					financia sus proyectos independientemente, <br/>y ¿qué significa esto? <b class="blue">La seguridad absoluta para ti,</b> que el departamento <br/>que comprarás será culminado y entregado en la fecha acordada.</p>
+ 				<button><a href="#"></a>CONOCE MÁS</button>
+ 			</div>
+ 		</div>
+ 	</div>
+ </div>
+
+
+ 	<div class="row cont-project">
+ 		<div class="col-sm-7 col-md-7">
+ 			<div class="row">
+ 				<div class="col-sm-4 col-md-4 project-1 sinpa">
+ 					<a href="#"><div class="cont-prot center-block">VALLE HERMOSO</div></a>
+ 				</div>
+ 				<div class="col-sm-4 col-md-4 project-2 sinpa">
+ 					<a href="#"><div class="cont-prot center-block">VALLE HERMOSO</div></a>
+ 				</div>
+ 				<div class=" col-sm-4 col-md-4 project-3 sinpa">
+ 					<a href="#"><div class="cont-prot center-block">VALLE HERMOSO</div></a>
+ 				</div>
+ 			</div>
+ 		</div>
+
+ 		<div class="col-sm-5 col-md-5">
+ 			<div class="row">
+ 				<div class="col-sm-6 col-md-6 project-4 sinpa">
+ 					<a href="#"><div class="cont-prot center-block">VALLE HERMOSO</div></a>
+ 				</div>
+ 				<div class="col-sm-6 col-md-6 project-5 sinpa">
+ 					<a href="#"><div class="cont-prot center-block">VALLE HERMOSO</div></a>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</div>
+
+ 	<div class="cont-contact">
+		<div class="container">
+	 		<div class="row">
+	 			<div class="col-md-12 contact text-center">
+	 				<h2>CONTÁCTENOS</h2>
+	 				<div class="border center-block"></div>
+	 				Si desea informarse sobre nuestros proyectos o hacernos llegar sus comentarios, por favor <br/>complete nuestro formulario de registro para poder contactarlo a la brevedad, o si desea <br/>comuníquese con nosotros o visítenos en nuestra oficina ó en la caseta de ventas.
+
+	 			</div>
+	 		</div>
+	 		<div class="row">
+	 			<div class="col-sm-6 col-md-6 contact center-block text-center">
+	 				<h3 class="tit-diret">AVENIR GRUPO INMOBILIARIO</h3>
+	 				<p class="div-bla">Direccion</p>
+					Ca. Marie Curie Nro. 372 - Urb. Industrial <br/> 
+					Santa Rosa , ATE; Lima - Perú. <br/>
+					<img src="img/home/ubicacion.png" alt=""><br/>
+					<a class="map" href="#">Ver ubicación de nuestros proyectos</a>
+					<p class="div-bla">Teléfono</p>
+					(511) 326-3400 Anexo 206
+					<p class="div-bla">E-mail</p>
+					<a class="map" href="#">contactos@avenir.com.pe</a><br/>
+					síguenos
+					<a href="https://www.facebook.com/avenirgrupoinmobiliario?fref=ts" target="_blank"><img src="img/home/fb-3.png" alt=""></a>
+					<img src="img/home/tw-3.png" alt="">
+					
+	 			</div>
+	 			<div class="col-sm-6 col-md-6 center-block text-center">
+	 				<h3 class="tit-diret">FORMULARIO DE CONTACTO</h3>
+	 				<div class="row">
+	 					<div class="col-md-10 center-block">
+	 						<form class="form-horizontal">
+							  <div class="form-group">
+							    <label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
+							    <div class="col-sm-10">
+							      <input type="email" class="form-control button-1" id="inputEmail3" placeholder="">
+							    </div>
+							  </div>
+							  <div class="form-group">
+							     <label for="inputEmail3" class="col-sm-2 control-label">E-mail</label>
+							    <div class="col-sm-10">
+							      <input type="email" class="form-control button-1" id="inputEmail3" placeholder="">
+							    </div>
+							  </div>
+							  <div class="form-group">
+							    <label for="inputEmail3" class="col-xs-2 col-sm-2 control-label">Telf.fijo</label>
+							    <div class="col-xs-4">
+							      <input type="email" class="form-control button-1" id="inputEmail3" placeholder="">
+							    </div>
+							     <label for="inputEmail3" class="col-xs-3 col-sm-2 control-label">Telf.movil</label>
+							    <div class="col-xs-3 col-sm-4">
+							      <input type="Telf.movil" class="form-control button-1" id="inputEmail3" placeholder="">
+							    </div>
+							  </div>
+							  <div class="form-group">
+							    <label for="inputEmail3" class="col-sm-2 control-label">Comentario</label>
+							    <div class="col-sm-10">
+							      <input type="email" class="form-control coment" id="inputEmail3" placeholder="">
+							    </div>							  
+							  </div>
+							  <a class="btn btn-default button-contact" href="#" role="button">Enviar</a>		
+							  				  
+								
+							</div> 
+	 					</div>
+	 				</div>
+	 				
+	 			</div>	
+	 		</div>
+	 	</div>	
+ 	</div>
+
