--- a/views/quienes-somos.html
+++ b/views/quienes-somos.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="css/interior/quienes_somos.css" type="text/css" />
+<div class="bg_popup video_quienes_somos display-none">
+	<div class="close_popup">X</div>
+</div>
 <section id="quienes_somos" class="pos_interior">
 	<section class="quienes_portada">
 		<div class="img_portada"></div>
@@ -8,33 +11,39 @@
 			</div>
 			</section>
 	</section>
-	<section class="quienes_text container">
-		<p><span class="sp_1">AVENIR Grupo Inmobiliario&reg;</span> es el resultado de la visión empresarial de un grupo de inversionistas y profesionales cuyo objetivo es aportar a la calidad de la vida de las familias ofreciéndoles la <span class="sp_2">viviencia deseada por su ubicación</span>, diseñó, calidad y precio justo.
-		Para conseguirlo cuenta con el sólido respaldo de las cuatro décadas de experiencias <span class="sp_3">CONCYSSA S.A.</span> en la construcción y gestión de proyectos.</p>
-	</section>
-	<section class="quienes_estrategica">
-		<div class="img_top_estrategia"></div>
-		<div class="bg_img_estrategia"></div>
-		<section class="container">
-			<section class="col-md-6">
-				<div class="col-md-6">
-					<div class="img_mision_avenir img_estrategia"></div>
-				</div>
-				<div class="col-md-6">
-					<h2>MISIÓN</h2>
-					<p>Satisfacer las necesidades de nuestros clientes, ofreciéndoles viviendas de calidad, a precios competitivos, entregadas oportunamente y con un buen servicio post venta</p>
-				</div>
+	<section class="quienes_content">
+		<section class="quienes_text container">
+			<p><span class="sp_1">AVENIR Grupo Inmobiliario&reg;</span> es el resultado de la visión empresarial de un grupo de inversionistas y profesionales cuyo objetivo es aportar a la calidad de la vida de las familias ofreciéndoles la <span class="sp_2">viviencia deseada por su ubicación</span>, diseñó, calidad y precio justo.
+			Para conseguirlo cuenta con el sólido respaldo de las cuatro décadas de experiencias <span class="sp_3">CONCYSSA S.A.</span> en la construcción y gestión de proyectos.</p>
+		</section>
+		<section class="quienes_estrategica">
+			<div class="bg_img_estrategia"></div>
+			<section class="container">
+				<section class="col-xs-12 col-sm-12 col-md-6">
+					<div class="col-xs-6 col-sm-6 col-md-6">
+						<div class="img_mision_avenir img_estrategia"></div>
+					</div>
+					<div class="col-xs-6 col-sm-6 col-md-6">
+						<h2>MISIÓN</h2>
+						<p>Satisfacer las necesidades de nuestros clientes, ofreciéndoles viviendas de calidad, a precios competitivos, entregadas oportunamente y con un buen servicio post venta</p>
+					</div>
+				</section>
+				<section class="col-xs-12 col-sm-12 col-md-6">
+					<div class="col-xs-6 col-sm-6 col-md-6">
+						<div class="img_vision_avenir img_estrategia"></div>
+					</div>
+					<div class="col-xs-6 col-sm-6 col-md-6">
+						<h2>VISIÓN</h2>
+						<p>Ser reconocidos como un Grupo inmobiliario sólido, confiable e innovador, sustentao en el respaldo de sus inversionistas, la capacidad de sus colaboradores y el conocimiento del mercado en el que opera.</p>
+					</div>
+				</section>
 			</section>
-			<section class="col-md-6">
-				<div class="col-md-6">
-					<div class="img_vision_avenir img_estrategia"></div>
-				</div>
-				<div class="col-md-6">
-					<h2>VISIÓN</h2>
-					<p>Ser reconocidos como un Grupo inmobiliario sólido, confiable e innovador, sustentao en el respaldo de sus inversionistas, la capacidad de sus colaboradores y el conocimiento del mercado en el que opera.</p>
-				</div>
+		</section>
+		<section class="quienes_videos">
+			<section class="container">
+				<div class="bg_youtube play_c"></div>
+				<h3>VIDEO INSTITUCIONAL</h3>
 			</section>
 		</section>
 	</section>
-	<section class="quienes_videos"></section>
 </section>
