--- a/css/interior/quienes_somos.css
+++ b/css/interior/quienes_somos.css
@@ -1,15 +1,66 @@
 #quienes_somos .quienes_portada .img_portada{background-image: url("../../img/interior/quienes-somos/quienes-somos-avenir.jpg");background-repeat: no-repeat;background-position: center;background-size: cover;height: 400px;width: 100%;}
-#quienes_somos .quienes_portada .container{color: #fff;position: relative;top: -260px;}
-#quienes_somos .quienes_portada h1{font-family: open_sansbold;font-size: 3em;float: right;margin: 0px 0px;margin-right: 5.3%;}
+#quienes_somos .quienes_portada .container{color: #fff;position: relative;top: -515px;}
+#quienes_somos .quienes_portada h1{font-family: open_sansbold;font-size: 3em;margin: 0px 0px;margin-top: 255px;text-align: center;}
+#quienes_somos .quienes_portada .img_content_title{background-image: url("../../img/interior/util/rectangulo_titulo.png");background-repeat: no-repeat;background-position: center;background-size: cover;height: 592px;position: absolute;right: 15px;width: 592px;}
 
-#quienes_somos .quienes_text p{color: #6d6d6d;font-family: open_sanslight;font-size: 17px;line-height: 28px;margin: 0 auto;text-align: center;width: 815px;}
+#quienes_somos .quienes_text{position: relative;z-index: 2;}
+#quienes_somos .quienes_text p{color: #6d6d6d;font-family: open_sanslight;font-size: 17px;line-height: 28px;margin: 6% auto 3% auto;text-align: center;width: 815px;}
 #quienes_somos .quienes_text p .sp_1{color: #1E96B9;}
 #quienes_somos .quienes_text p .sp_2,#quienes_somos .quienes_text p .sp_3{color: #fb5008}
 #quienes_somos .quienes_text p .sp_3{text-decoration: underline;}
 
-#quienes_somos .quienes_estrategica{background: rgba(0,105,126,0.7);color: #fff;;font-family: open_sanslight;min-height: 670px;}
-#quienes_somos .quienes_estrategica h2{font-family: open_sansbold}
-#quienes_somos .quienes_estrategica .img_estrategia{background-repeat: no-repeat;border: 1px solid #00bdff;margin: 0 auto;height: 231px;width: 231px;}
+#quienes_somos .quienes_estrategica{background-image: url("../../img/interior/quienes-somos/bg_mision_vision.png");background-position: center;background-repeat: no-repeat;color: #fff;;font-family: open_sanslight;min-height: 665px;position: relative;}
+#quienes_somos .quienes_estrategica h2{font-family: open_sansbold;font-size: 25px;}
+#quienes_somos .quienes_estrategica p{font-family: open_sanslight;font-size: 15px;}
+#quienes_somos .quienes_estrategica .img_estrategia{background-repeat: no-repeat;background-position: center center;border: 1px solid #00bdff;margin: 0 auto;height: 231px;width: 231px;}
 #quienes_somos .quienes_estrategica .img_mision_avenir{background-image: url("../../img/interior/quienes-somos/mision-avenir.jpg");}
 #quienes_somos .quienes_estrategica .img_vision_avenir{background-image: url("../../img/interior/quienes-somos/vision-avenir.jpg");}
-#quienes_somos .quienes_estrategica .container{padding: 15.5% 0%;}
+#quienes_somos .quienes_estrategica .container{padding-top: 210px;}
+
+#quienes_somos .quienes_videos{background-image: url("../../img/interior/quienes-somos/video_quienes.png");background-position: center;background-repeat: no-repeat;color: #fff;;font-family: open_sansbold;margin-top: -97px;min-height: 695px;}
+#quienes_somos .quienes_videos .bg_youtube{background-image: url("../../img/interior/quienes-somos/youtube_quienes.png");background-repeat: no-repeat;background-position: center;cursor: pointer;margin: 0 auto;min-height: 95px;width: 127px}
+#quienes_somos .quienes_videos .container{padding-top: 305px;text-align: center;}
+
+@media (max-width: 380px){
+
+}
+
+@media (max-width: 452px){
+	#quienes_somos .quienes_estrategica  .col-xs-6{width: 100%;}
+	#quienes_somos .quienes_estrategica .container{padding-top: 0px !important;}
+	#quienes_somos .quienes_estrategica .col-sm-12{top: 60px;}
+	#quienes_somos .quienes_estrategica .img_estrategia{height: 120px;}
+	#quienes_somos .quienes_estrategica p{font-size: 12.5px !important;}
+	#quienes_somos .quienes_estrategica h2,#quienes_somos  h3{font-size: 22px !important;}
+}
+
+@media (min-width: 453px) and (max-width: 480px){
+	#quienes_somos .quienes_estrategica .img_estrategia{height: 185px;}
+	#quienes_somos .quienes_estrategica .container{padding-top: 75px !important;}
+}
+
+@media (max-width: 582px){
+	#quienes_somos .quienes_estrategica .img_estrategia{width: initial !important;}
+	#quienes_somos .quienes_estrategica h2{font-size: 24px;}
+	#quienes_somos .quienes_estrategica p{font-size: 14px;}
+}
+
+@media (max-width: 992px) {
+	#quienes_somos .quienes_text p{width: 100%}
+
+	#quienes_somos .quienes_estrategica .img_estrategia{background-size: cover;width: 231px}
+	#quienes_somos .quienes_estrategica .col-sm-12{margin: 10px 0px;}
+	#quienes_somos .quienes_estrategica .container{padding-top: 88px}
+}
+
+@media (max-width: 640px){
+	#quienes_somos .quienes_portada .img_content_title{right: 0px;width: 100%;}
+}
+
+@media (max-width: 1024px){
+	
+}
+@media (min-width: 992px) and (max-width: 1200px){
+	#quienes_somos .quienes_estrategica .img_estrategia{background-size: cover;width: initial;}
+	#quienes_somos .quienes_estrategica .container{padding-top: 230px;}
+}
