--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,13 @@
+<script>  
+    $(document).ready(function(){
+      $('.bxslider').bxSlider();
+    });
+  </script>
+
 <slider>
     <ul class="bxslider">
-      <li><img src="img/slider-1.jpg" /></li>      
+      <li><img src="img/slider-1.jpg" /></li>    
+           
     </ul>
   </slider>
  
