--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,7 @@ button:hover{
 	font-size: 35px;
 }
 .border{
-	border: 1px solid #DADADA;
+	border: 1px solid #C8C8C8;
 	width: 100px;
 	margin-bottom: 35px;
 }
