--- a/views/quienes-somos.html
+++ b/views/quienes-somos.html
@@ -3,7 +3,7 @@
 	<div class="close_popup">X</div>
 </div>
 <section id="quienes_somos" class="pos_interior">
-	<section class="quienes_portada">
+	<section class="quienes_portada base_interior">
 		<div class="img_portada"></div>
 		<section class="container">
 			<div class="img_content_title">
