--- a/css/styles.css
+++ b/css/styles.css
@@ -397,7 +397,17 @@ margin-bottom: 30px;
 /*------------------------*/
 /*-----INTERIOR BASE-------*/
 /*------------------------*/
+.base_interior .img_portada{background-repeat: no-repeat;background-position: center;background-size: cover;height: 457px;width: 100%;}
+.base_interior .container{color: #fff;position: relative;top: -515px;}
+.base_interior h1{font-family: open_sansbold;font-size: 3em;margin: 0px 0px;margin-top: 255px;text-align: center;}
+.base_interior h3{font-family: open_sanslight;font-size: 1.7em;margin: 0px 0px;margin-top: 245px;text-align: center;}
+.base_interior .img_content_title{background-image: url("../img/interior/util/rectangulo_titulo.png");background-repeat: no-repeat;background-position: center;background-size: cover;height: 592px;position: absolute;right: 15px;width: 592px;}
+
 .popup_bg{background-color: rgba(0,0,0,0.7);left: 0;height: 100%;position: fixed;top: 0;width: 100%;z-index: 9999;}
 .display-none{display: none;}
 .bg_popup{background-color: #fff;position: fixed;z-index: 99999;height: 350px;left: 50%;margin-left: -300px;margin-top: -175px;top: 50%;width: 600px;}
 .bg_popup .close_popup{background-color: #000;color: #fff;cursor: pointer;float: right;margin-top: -36px;padding: 8px 12px;}
+
+@media (max-width: 640px){
+	.base_interior .img_content_title{right: 0px;width: 100%;}
+}
