--- a/views/contactenos.html
+++ b/views/contactenos.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="css/interior/quienes_somos.css" type="text/css" />
 <link rel="stylesheet" href="css/interior/contactenos.css" type="text/css" />
 
-<section id="quienes_somos" class="pos_interior">
-	<section class="quienes_portada">
+<section id="contacto" class="pos_interior">
+	<section class="contacto_portada base_interior">
 		<div class="img_portada contacto"></div>
 		<section class="container">
 			<div class="img_content_title">
