--- a/views/valle-hermoso.html
+++ b/views/valle-hermoso.html
@@ -3,11 +3,12 @@
 	<section class="valle_hermoso_portada base_interior">
 		<div class="img_portada"></div>
 		<section class="container">
+			<div class="logo-valle-hermoso"></div>
 			<div class="img_content_title">
 				<h3>FIRENZE RESIDENCIAL</h3>
 				<h1>SANTIAGO DE SURCO</h1>
 			</div>
-			</section>
+		</section>
 	</section>
 	<section class="content_proyectos">
 		<section class="caracteristica_proyectos container">
