--- a/views/pueblo-libre.html
+++ b/views/pueblo-libre.html
@@ -39,8 +39,7 @@
 			</div>
 			<div class="col-md-2"></div>
 		</section>
-	</section>
-	<section class="text_proyectos container">
+		<section class="text_proyectos container">
 			<div class="col-md-4 resumen_text_proyectos">
 				<p>DONDE<br>EL PRECIO <span>NO</span><br> ES UN <span>FRENO</span></p>
 			</div>
@@ -49,4 +48,95 @@
 				<span>el corazón del tradicional distrito de Pueblo Libre</span>, Firenze Residencial ofrece a sus residentes fácil acceso a los principales distritos de Lima, así como a uno de los enclaves comerciales <span>más modernos y dinámicos de la ciudad</span>, creando para ti la combinación perfecta entre tradición y modernidad, donde <span>tú y tu familia serán los protagonistas de su propio espacio.</span></p>
 			</div>
 		</section>
+		<section class="departamentos_proyectos">
+			<div class="departamentos_det_aca container">
+				<h2>TIPOS DE DEPARTAMENTOS</h2>
+				<div class="detalle_caracteristica">
+					<article class="col-md-2"></article>
+					<article class="col-md-2 car_depa carac_1">
+						<span>FLAT</span>
+						<p>51<span>mt<sup>2</sup></span></p>
+					</article>
+					<article class="col-md-2 car_depa carac_2">
+						<span>FLAT</span>
+						<p>74<span>mt<sup>2</sup></span></p>
+					</article>
+					<article class="col-md-2 car_depa carac_3">
+						<span>FLAT</span>
+						<p>64<span>mt<sup>2</sup></span></p>
+					</article>
+					<article class="col-md-2 car_depa carac_4">
+						<span>FLAT</span>
+						<p>77<span>mt<sup>2</sup></span></p>
+					</article>
+					<article class="col-md-2"></article>
+					<article class="col-md-3"></article>
+					<article class="col-md-2 car_depa carac_5">
+						<span>FLAT</span>
+						<p>40<span>mt<sup>2</sup></span></p>
+					</article>
+					<article class="col-md-2 car_depa carac_6">
+						<span>FLAT</span>
+						<p>65<span>mt<sup>2</sup></span></p>
+					</article>
+					<article class="col-md-2 car_depa carac_7">
+						<span>FLAT</span>
+						<p>80<span>mt<sup>2</sup></span></p>
+					</article>
+					<article class="col-md-3"></article>
+				</div>
+				<div class="btn">DETALLES Y ACABADOS</div>
+			</div>
+		</section>
+		<section class="galeria_proyectos">
+			<div class="galeria_fotos container">
+				<h2>GALERÍA DE FOTOS</h2>
+				<div class="detalle_fotos">
+					<!--<article class="col-md-2"></article>-->
+					<article class="col-md-4">
+						<div class="item_galeria img_galeria_1">
+							<div class="mask">
+								<div class="ico_lupa"></div>
+							</div>
+						</div>
+					</article>
+					<article class="col-md-4">
+						<div class="item_galeria img_galeria_2">
+							<div class="mask">
+								<div class="ico_lupa"></div>
+							</div>
+						</div>
+					</article>
+					<article class="col-md-4">
+						<div class="item_galeria img_galeria_3">
+							<div class="mask">
+								<div class="ico_lupa"></div>
+							</div>
+						</div>
+					</article>
+					<article class="col-md-4">
+						<div class="item_galeria img_galeria_4">
+							<div class="mask">
+								<div class="ico_lupa"></div>
+							</div>
+						</div>
+					</article>
+					<article class="col-md-4">
+						<div class="item_galeria img_galeria_5">
+							<div class="mask">
+								<div class="ico_lupa"></div>
+							</div>
+						</div>
+					</article>
+					<article class="col-md-4">
+						<div class="item_galeria img_galeria_6">
+							<div class="mask">
+								<div class="ico_lupa"></div>
+							</div>
+						</div>
+					</article>
+				</div>
+			</div>
+		</section>
+	</section>
 </section>
