--- a/views/pueblo-libre.html
+++ b/views/pueblo-libre.html
@@ -138,5 +138,73 @@
 				</div>
 			</div>
 		</section>
+		<section class="ubicanos_proyectos">
+			<div class="ubicanos_contenidos container">
+				<h2>UBÍCANOS</h2>
+				<div class="ubicanos_formulario">
+					<div class="col-md-4 block_1">
+						<p><span>Dirección:</span> Av. Manuel Dulanto 1464</p>
+						<br>
+						<p><span>Distrito:</span> Pueblo Libre</p>
+						<br>
+						<p><span>Teléfono:</span> (511) (94) 641*3226</p>
+						<br>
+						<p><span>Correo:</span> contactos@avenir.com.pe<br></p>
+						<br>
+					</div>
+					<div class="col-md-4 block_2">
+						<p>Listado de acabado de dpto</p>
+						<div class="btn">PRECIO</div>
+						<div class="btn">TRANSPARENCIA</div>
+					</div>
+					<div class="col-md-4 block_3">
+						<p>Financiamiento</p>
+						<div class="img_bbva"></div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="mapa_proyectos">
+			<div class="container">
+				<div class="col-md-7 center-block text-center"></div>
+				<div class="col-md-4 center-block text-center contact_proyectos">
+					<h3>CONTÁCTANOS</h3>
+					<div class="row">
+						<div class="col-md-12 center-block">
+							<form action="" class="form-horizontal ng-pristine ng-valid">
+								<div class="form-group">
+								    <div class="col-sm-12">
+								      <input type="text" class="form-control button-1" placeholder="Nombre">
+								    </div>
+							  	</div>
+							  	<div class="form-group">
+								    <div class="col-sm-12">
+								      <input type="email" class="form-control button-1" placeholder="E-mail">
+								    </div>
+							  	</div>
+							  	<div class="form-group">
+								    <div class="col-sm-12">
+								      <input type="email" class="form-control button-1" placeholder="Teléfono">
+								    </div>
+							  	</div>
+							  	<div class="form-group">
+								    <div class="col-sm-12">
+							      		<textarea class="form-control button-1" cols="30" rows="10" placeholder="Escriba un comentario"></textarea>
+							      		<!--<input type="text" class="form-control coment"  placeholder="Escriba un comentario">-->
+							    	</div>
+							  	</div>
+							  	<div class="form-group">
+								    <div class="col-sm-7"></div>
+								    <div class="col-sm-5">
+							      		<input type="submit" class="form-control send_proyectos"  value="Enviar">
+							    	</div>
+							  	</div>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-1"></div>
+			</div>
+		</section>
 	</section>
 </section>
