--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,10 @@ a,p{font-family: 'open_sanssemibold';}
 .des-rol p{
 	margin: 10px 0;
 }
+.carousel-indicators .active {
+border: 2px solid #fff;
+background-color: #09BAFA;
+}
 
 /*----Home-----*/
 .bxslider img{
@@ -407,7 +411,24 @@ margin-bottom: 30px;
 .display-none{display: none;}
 .bg_popup{background-color: #fff;position: fixed;z-index: 99999;height: 350px;left: 50%;margin-left: -300px;margin-top: -175px;top: 50%;width: 600px;}
 .bg_popup .close_popup{background-color: #000;color: #fff;cursor: pointer;float: right;margin-top: -36px;padding: 8px 12px;}
-
+.carousel-indicators{bottom: 0;}
+.valle {
+position: absolute;
+z-index: 3;
+right: 40px;
+width: 100%;
+height: 497px;
+}
+.valle img {
+position: absolute;
+right: 0;
+bottom: 45px;
+}
+.vector-intro {
+position: absolute;
+z-index: 2;
+right: -80px;
+}
 @media (max-width: 640px){
 	.base_interior .img_content_title{right: 0px;width: 100%;}
 }
