--- a/views/home.html
+++ b/views/home.html
@@ -1,15 +1,47 @@
-<script>  
-    $(document).ready(function(){
-      $('.bxslider').bxSlider();
-    });
-  </script>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+  <!-- Wrapper for slides -->
+  <div class="container">
+  		<div class="row">
+  			<div class="col-md-12">
+  				<div class="valle"><a href="views/valle-hermoso.html"><img src="img/go-valle.jpg" alt=""></a></div>
+  				<div class="vector-intro"><img src="img/vector-intro.png" alt=""></div>
+  			</div>
+  		</div>
+  </div>
+  <div class="carousel-inner" role="listbox">  	
+    <div class="item active">
+      <img src="img/slider-1.jpg">
+      <div class="carousel-caption">
+      </div>
+    </div>
+    <div class="item">
+      <img src="img/slider-2.jpg">
+      <div class="carousel-caption">
+      </div>
+    </div>
+    <div class="item">
+      <img src="img/slider-3.jpg">
+      <div class="carousel-caption">       
+      </div>
+    </div>
+  </div>
+  <!-- Controls
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a> -->
+</div>
 
-<slider>
-    <ul class="bxslider">
-      <li><img src="img/slider-1.jpg" /></li>    
-           
-    </ul>
-  </slider>
  
  <div class="container">
  	<div class="row">
@@ -124,3 +156,4 @@
 	 	</div>	
  	</div>
 
+ <script src="js/bootstrap.min.js"></script>
